# microgen

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .zenodo.json  Bar.py  CITATION.cff  Cylinder.py  Dockerfile  Functions.py  Mesh.py  Phase.py  README.md  __init__.py  a_microgen.py  a_tpms.py  a_voronoi.py  environment.yml  gyroid_gd_bunny.py  gyroid_remesh.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-and-test.yml  build-docs.yml  conda-packaging.yml  integration.yml  mmg-osx-arm64.yml  mmg-packaging-linux.yml  mmg-packaging-osx-64.yml  mmg-packaging.yml  mmg-windows.yml  neper-packaging  neper-packaging.yml  pre-commit.yml  pypi-packaging.yml  python-package-conda.yml  test-conda-package.yml
conda.recipe/: meta.yaml  yum_requirements.txt
docs/: 3d_operations.rst  Documentation.rst  Install.rst  Overview.rst  basic_shapes.rst  conf.py  environment.yaml  index.rst  make.bat  mesh.rst  microgen.rst  microgen.shape.rst  microgen.shape.strut_lattice.rst  modules.rst  quick_start.rst  repeated_cells.rst  requirements.txt  shape.rst  tpms.rst  tutorials.rst
docs/_static/: generates_images.py
docs/_templates/: custom-class-template.rst  layout.html
docs/examples/: 3d_operations.rst  basic_shapes.rst  implicit_shapes.rst  lattices.rst  mesh.rst  repeated_cells.rst  tpms.rst
examples/: conformal_vs_cartesian_bunny.py  ellipsoid.ipynb  run_examples.py  run_examples.sh  tpms_infill_gallery.py
examples/3Doperations/Voronoi/: testNeper.py
examples/3Doperations/VoronoiGyroid/: voronoi_gyroid.py
examples/3Doperations/rasterEllipsoid/: rasterEllipsoid.py
examples/3Doperations/repeatGeom/: repeat.py  repeatGeom.py
examples/3Doperations/repeatShape/: octettruss.step  repeatShape.py
examples/3Doperations/repeat_shape/: octettruss.step  repeat_shape.py
examples/3Doperations/voronoi/: test1.tess  voronoi.py
examples/3Doperations/voronoiGyroid/: voronoiGyroid.py
examples/BasicShapes/platon/: platon.py
examples/BasicShapes/shapes/: shapes.py
examples/Fibers/: fibers.csv  fibers.py
examples/ImplicitShapes/: gyroid_implicit_phase.py  primitives_and_booleans.py  trabecular_bone.py
examples/Lattices/: custom_lattice.py  implicit_lattice.py  preset_lattice.py
examples/Lattices/honeycomb/: extrudedHoneycomb.py  honeycomb.py
examples/Lattices/octetTruss/: octetTruss.py  testOctet.py
examples/Mesh/gyroid/: gyroid_step_remesh.py
examples/Mesh/mmg/: Mesh.msh  mmg3d.py  test_mmg.py  test_mmg3d.py
examples/Mesh/mmg-voro/: mmg.py  test_mmg.py
examples/Mesh/remesh/: remesh.py
examples/PyVista/honeycomb/: extrudedHoneycomb.py  seedList.data
examples/PyVista/tpms/: fischerKochS.py
examples/TPMS/coordinate_system/: cylindrical.py  cylindrical_graded.py  rotation.py  spherical.py
examples/TPMS/cylindrical/: cylindrical.py  cylindrical_graded.py
examples/TPMS/grading/: cell_size.py  cell_type.py  density.py  distance_to_surface.py
examples/TPMS/gyroid/: gyroid.py
examples/TPMS/infill/: gyroid.py  infill.py
examples/TPMS/surface/: fischerKochS.py  fischer_koch_s.py
examples/TPMS/tpms/: tpms.py
examples/TPMS/tpmsShell/: tpmsShell.py
examples/TPMS/tpmsSphere/: tpmsSphere.py
examples/Voronoi/: testNeper.py
examples/fibers/: fibers.py
examples/honeycomb/: extrudedHoneycomb.py
examples/jupyter_notebooks/: ellipsoid_sidecar.ipynb  ellipsoid_vtp.ipynb  examples.ipynb  mesh.ipynb  rasterTPMS.ipynb  requirements.txt
examples/mmg/: initialmesh.mesh  initialmesh.sol  test_mmg.py
examples/mmg-voro/: Mesh.msh  test_mmg.py
examples/octetTruss/: testOctet.py
examples/rasterEllipsoid/: rasterEllipsoid.py
examples/rasterEllispoid/: rasterEllispoid.py
examples/rasterGyroid/: rasterGyroid.py
examples/rasterTPMS/: rasterTPMS.py
examples/triplyPeriodicMinimalSurfaces/: custom.py  testTPMS.py
microgen/: Bar.py  Box.py  Capsule.py  Cylinder.py  Ellipsoid.py  External.py  ExtrudedPolygon.py  Functions.py  Material.py  Material_functions.py  Material_sections.py  Mesh.py  Operations.py  Periodic.py  Phase.py  Polyhedra.py  Polyhedron.py  Rve.py  Sphere.py  Tpms.py  TriplyPeriodicSurfaces.py  Voronoi.py  __init__.py  _version.py  boxMesh.py  box_mesh.py  cad.py  cubicMesh.py  cubic_mesh.py  external.py  material.py  mesh.py  mmg.py  operations.py  periodic.py  phase.py  phaseMesh.py  phase_mesh.py  pvoperations.py  remesh.py  (+5 more)
microgen/cad/: __init__.py  _install.py  io.py  meshbridge.py  primitives.py  shape.py  topo.py
microgen/shape/: __init__.py  _frep_grf.py  _types.py  basicGeometry.py  basic_geometry.py  box.py  capsule.py  custom_implicit_shape.py  cylinder.py  ellipsoid.py  extrudedPolygon.py  extruded_polygon.py  implicit_basic_factory.py  implicit_ops.py  implicit_shape.py  periodic_shell.py  polyhedron.py  pv_tpms.py  random.py  shape.py  sphere.py  spinodoid.py  surface_functions.py  tpms.py  tpms_grading.py
mmg.recipe/: bld.bat  build.sh  meta.yaml
neper.recipe/: bld.bat  build.sh  meta.yaml
projects/coordinate_system/: cartesian.py  cylindrical.py  cylindrical_graded.py
projects/grading/: cell-size.py  cell-type.py  density.py
src/microgen/: box_mesh.py  mesh.py  periodic.py  remesh.py  report.py  rve.py
tests/: .pylintrc  __init__.py  conftest.py  constants.py  test_box_mesh.py  test_cad_optional.py  test_external.py  test_implicit_voronoi_lattice.py  test_is_periodic.py  test_mesh.py  test_meshPeriodic.py  test_mesh_periodic.py  test_no_top_level_ocp_imports.py  test_octettruss.py  test_periodic.py  test_phase.py  test_phase_constructors.py  test_phase_mesh.py  test_phase_pieces.py  test_remesh.py  test_rve.py  test_sample.py  test_shapes.py  test_single_mesh.py  test_spinodoid.py  test_tpms.py  test_version.py
tests/profiling/: test_tpms.py
tests/shapes/: __init__.py  test_default_mesh_methods.py  test_implicit.py  test_implicit_ops.py  test_implicit_shape.py  test_lattice.py  test_lattice_utils.py  test_primitive_implicit.py  test_shape_period.py  test_shapes.py  test_tpms.py  test_tpms_frep.py  test_tpms_grading.py
(+30 files in other folders)
