[project]
name = "microgen"
version = "1.4.0.dev0"
authors = [{ name = "3MAH", email = 'set3mah@gmail.com' }]
description = "Microstructure generation and meshing"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["microstructure", "lattice", "periodic", "TPMS", "mesh"]
license = { text = "GPLv3" }
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # Python 3.13 not yet supported via pip (VTK 9.3.1 has no 3.13 wheel on PyPI)
]
dependencies = ["numpy", "pyvista", "gmsh", "meshio", "cadquery", "scipy", "nlopt"]

[project.optional-dependencies]
dev = [
    'pre-commit>=3.5.0',
    "ruff>=0.8.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
]
docs = [
    "ipykernel>=6.29.5",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-napoleon>=0.7",
    "jupyter-sphinx>=0.5.3",
    "pythreejs>=2.4.2",
    "mock>=5.1.0",
    "myst-parser>=3.0.1",
]
ray = [
    "trimesh",
    "embreex",
]
jupyter = [
    "jupyterlab>=3.6.8,<4.6",
    "jupyter-cadquery>=2.2.1",
    "ipyvtklink>=0.2.3",
    "ipygany>=0.5.0",
    "sidecar>=0.5.2",
    "jupyterview>=0.7.0",
]
all = ["microgen[dev, docs, jupyter, ray]"]

[project.urls]
Documentation = 'https://3mah.github.io/microgen-docs/'
"Bug Tracker" = 'https://github.com/3MAH/microgen/issues'
"Source Code" = 'https://github.com/3MAH/microgen'

[tool.setuptools]
packages = ["microgen", "microgen.shape", "microgen.shape.strut_lattice"]

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore deprecation warnings from numpy
    "ignore:.* is a deprecated alias for .*:DeprecationWarning",
]

[[tool.mypy.overrides]]
module = ["gmsh", "scipy.spatial"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
exclude = [
    "docs/*",
    "tests/*",
    "microgen/box_mesh.py",
    "microgen/external.py",
    "microgen/mesh.py",
    "microgen/operations.py",
    "microgen/periodic.py",
    "microgen/phase.py",
    "microgen/remesh.py",
    "microgen/report.py",
    "microgen/rve.py",
    "microgen/single_mesh.py",
    "examples/*",
] # external = ["E131", "D102", "D105"]
select = ["ALL"]
ignore = ["E501", "S101", "ANN101", "ANN102", "ANN003"]

[tool.ruff.format]
docstring-code-format = true
